tests/baselines/reference/externalModuleWithoutCompilerFlag1.errors.txt
==== tests/cases/compiler/externalModuleWithoutCompilerFlag1.ts (1 errors) ====
    
    // Not on line 0 because we want to verify the error is placed in the appropriate location.
      export module M {
      ~~~~~~
!!! externalModuleWithoutCompilerFlag1.ts(3,3): error TS5037: Cannot compile external modules unless the '--module' flag is provided.
    }